<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/card_view"
            android:layout_marginEnd="@dimen/card_view_margin"
            android:layout_marginStart="@dimen/card_view_margin"
            card_view:cardCornerRadius="4dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:gravity="end"
                    android:paddingTop="8dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/dec_format"
                        android:textColor="@color/hint_text"/>

                </TableRow>


                <TableRow>

                    <EditText
                        android:id="@+id/dec_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="9"
                        android:gravity="end"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="32"
                        android:nextFocusDown="@+id/hex_edit_text"/>
                </TableRow>

                <TableRow
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/hex_format"
                        android:textColor="@color/hint_text"/>
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/hex_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="9"
                        android:gravity="end"
                        android:maxLength="32"/>
                </TableRow>

                <TableRow
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/bin_format"
                        android:textColor="@color/hint_text"/>
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/bin_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="9"
                        android:gravity="end"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:lines="2"
                        android:maxLength="32"/>
                </TableRow>


            </TableLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>